--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "emoji-js": "^3.4.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
@@ -44,6 +45,7 @@
     "react-motion": "^0.5.2",
     "sass-loader": "^6.0.6",
     "slack": "^10.1.1",
+    "slackdown": "^0.1.1",
     "socket.io-client": "^2.0.4",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
